@@ -40,6 +40,7 @@ import org.springframework.util.Assert;
  * @author Artem Vozhdayenko
  * @author Artem Bilan
  * @author Christian Tzolov
+ * @author Jiri Soucek
  *
  * @since 6.0
  */
@@ -206,4 +207,18 @@ public class Mqttv5ClientManager
 		logger.error("MQTT error occurred", exception);
 	}
 
+	@Override
+	public boolean isConnected() {
+		this.lock.lock();
+		try {
+			IMqttAsyncClient client = getClient();
+			if (client != null) {
+				return client.isConnected();
+			}
+			return false;
+		}
+		finally {
+			this.lock.unlock();
+		}
+	}
 }
